--- a/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.less
+++ b/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.less
@@ -4,15 +4,12 @@
     }
 
     .title-wrapper {
-        width: 50%;
-        padding-right: 48px;
-        text-align: right;
+        margin-left: 50px;
 
         .title {
             color: @ncl-dusk-three;
             font-size: 16px;
             font-weight: bold;
-            margin-right: 570px;
         }
     }
 
@@ -24,12 +21,10 @@
 
             .function-name-wrapper {
                 width: 50%;
-                padding-right: 48px;
+                padding-right: 24px;
+                padding-left: 80px;
 
                 .function-name {
-                    width: 687px;
-                    float: right;
-
                     .input-label {
                         font-size: 14px;
                         font-weight: 600;
@@ -44,10 +39,10 @@
 
             .function-runtime-wrapper {
                 width: 50%;
+                padding-left: 24px;
+                padding-right: 10%;
 
                 .function-runtime {
-                    width: 552px;
-
                     .input-label {
                         font-size: 14px;
                         font-weight: 600;
