--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.less
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.less
@@ -8,8 +8,7 @@
             width: 50%;
             display: flex;
             justify-content: flex-end;
-            padding-right: 37px;
-            margin: 0 10px 8px 0;
+            margin-bottom: 8px;
 
             .function-name {
                 width: 100%;
