--- a/src/nuclio/projects/project/functions/create-function/create-function.less
+++ b/src/nuclio/projects/project/functions/create-function/create-function.less
@@ -5,6 +5,7 @@
         width: 100%;
         height: 377px;
         background: url('/assets/images/nuclio.png') no-repeat center;
+        background-size: cover;
 
         .title {
             color: white;
