--- a/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
@@ -1,9 +1,9 @@
 <div class="ncl-collapsing-row">
-    <div class="title-block common-table-row" data-ng-class="{'collapsed': !$ctrl.item.ui.expanded}">
+    <div class="title-block common-table-row" data-ng-class="{'collapsed': !$ctrl.item.ui.editModeActive}">
         <div class="common-table-cell row-collapse">
             <span class="collapse-icon"
-                  data-ng-click="$ctrl.onCollapse()"
-                  data-ng-class="{'collapsed igz-icon-right': !$ctrl.item.ui.expanded, 'igz-icon-down': $ctrl.item.ui.expanded}"></span>
+                  data-ng-click="$ctrl.onCollapse($event)"
+                  data-ng-class="{'collapsed igz-icon-right': !$ctrl.item.ui.editModeActive, 'igz-icon-down': $ctrl.item.ui.editModeActive}"></span>
         </div>
 
         <div data-ng-show="!$ctrl.item.ui.editModeActive" class="igz-row common-table-cells-container item-row">
@@ -14,7 +14,16 @@
                 {{$ctrl.item.kind}}
             </div>
             <div class="igz-col-70 item-info">
-                <div data-ng-hide="$ctrl.item.ui.expanded" class="collapsed-item-info-block">
+                <div data-ng-hide="$ctrl.item.ui.editModeActive" class="collapsed-item-info-block">
+                    <span data-ng-if="!$ctrl.isNil($ctrl.item.url)">
+                        <span class="field-label">URL</span>:&nbsp;{{ $ctrl.item.url }};&nbsp;
+                    </span>
+                    <span data-ng-if="!$ctrl.isNil($ctrl.item.maxWorkers)">
+                        <span class="field-label">Max Workers</span>:&nbsp;{{ $ctrl.item.maxWorkers }};&nbsp;
+                    </span>
+                    <span data-ng-if="!$ctrl.isNil($ctrl.item.secret)">
+                        <span class="field-label">Secret</span>:&nbsp;{{ $ctrl.item.secret }};&nbsp;
+                    </span>
                     <span data-ng-repeat="(key, value) in $ctrl.item.attributes">
                         <span class="field-label">{{ key }}</span>:&nbsp;{{ value }};&nbsp;
                     </span>
@@ -36,6 +45,15 @@
                         </div>
                         <div class="igz-col-70 common-table-cell">
                             {{ $ctrl.item.maxWorkers }}
+                        </div>
+                    </div>
+                    <div class="igz-row common-table-cells-container item-info-row"
+                         data-ng-if="!$ctrl.isNil($ctrl.item.secret)">
+                        <div class="igz-col-30 common-table-cell field-label">
+                            Secret:
+                        </div>
+                        <div class="igz-col-70 common-table-cell">
+                            {{ $ctrl.item.secret }}
                         </div>
                     </div>
                     <div class="igz-row common-table-cells-container item-info-row"
