--- a/src/nuclio/projects/project/functions/create-function/create-function.less
+++ b/src/nuclio/projects/project/functions/create-function/create-function.less
@@ -1,11 +1,11 @@
 .new-function-wrapper {
     position: relative;
-    min-width: 1650px;
 
     .new-function-header {
         width: 100%;
         height: 377px;
         background: url('/assets/images/nuclio.png') no-repeat center;
+        background-size: cover;
 
         .title {
             color: white;
@@ -17,12 +17,10 @@
 
         .new-function-type {
             display: flex;
+            justify-content: center;
 
             .function-from-scratch-wrapper {
-                width: 50%;
-                display: flex;
-                justify-content: flex-end;
-                padding-right: 48px;
+                padding: 0 24px;
 
                 .function-from-scratch {
                     width: 503px;
@@ -87,6 +85,8 @@
             }
 
             .function-from-template-wrapper {
+                padding: 0 24px;
+
                 .function-from-template {
                     width: 503px;
                     height: 254px;
