Impl [monaco] Pad top of monaco editor content

--- a/src/nuclio/common/components/monaco/monaco.less
+++ b/src/nuclio/common/components/monaco/monaco.less
@@ -5,8 +5,8 @@
     }
 
     .monaco-editor {
-        .monaco-editor-background {
-            margin-left: 20px;
+        .margin, .overflow-guard {
+            padding-top: 20px;
         }
     }
 }
