--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -97,6 +97,8 @@
     }
 
     .code-edit-section {
+        min-height: 400px;
+
         .code-editor {
             height: 500px;
             width: 100%;
