--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -1,8 +1,21 @@
-.tab-content-wrapper {
-    min-width: 946px;
-    padding: 24px 41px;
-    height: 100%;
-    margin-bottom: 24px;
+.ncl-edit-version-code {
+
+    .mCSB_container {
+        height: 799px;
+    }
+
+    .igz-scrollable-container {
+        height: 100%;
+
+        .ncl-monaco {
+            height: 100%;
+        }
+    }
+
+    .ncl-edit-version-code-wrapper {
+        height: 100%;
+        padding: 24px 41px;
+    }
 
     .section-wrapper {
         padding: 18px 39px 0 23px;
@@ -18,6 +31,7 @@
         }
 
         .code-edit-section {
+            height: 100%;
             flex: 1 1 auto;
             display: flex;
 
@@ -97,6 +111,7 @@
     }
 
     .code-edit-section {
+        height: 100%;
         min-height: 400px;
 
         .code-editor {
