--- a/src/nuclio/common/less/general-rules.less
+++ b/src/nuclio/common/less/general-rules.less
@@ -3,5 +3,14 @@ body {
         width: 100%;
         height: 100%;
     }
+
+    .nuclio-validating-input {
+        .validating-input-field .input-field, .validating-input-field .textarea-field {
+            &:not([disabled]):not([readonly]):not(:focus):hover {
+                background-color: transparent;
+                border: solid 1px @ncl-pale-grey;
+            }
+        }
+    }
 }
 
