--- a/src/nuclio/common/components/edit-item/edit-item.less
+++ b/src/nuclio/common/components/edit-item/edit-item.less
@@ -19,6 +19,12 @@
         .class-field {
             margin-right: 14px;
             width: 154px;
+
+            .error {
+                color: @ncl-darkish-pink;
+                font-size: 12px;
+                white-space: nowrap;
+            }
         }
 
         &:last-child {
