--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -21,12 +21,18 @@
             </div>
             <div class="igz-col-12-5 class-field">
                 <igz-default-dropdown data-select-property-only="id"
+                                      data-input-name="itemClass"
+                                      data-is-required="true"
                                       data-placeholder="Select class..."
                                       data-prevent-drop-up="true"
                                       data-values-array="$ctrl.classList"
                                       data-selected-item="$ctrl.item.kind"
+                                      data-form-object="$ctrl.editItemForm"
                                       data-item-select-callback="$ctrl.onSelectClass(item)">
                 </igz-default-dropdown>
+                <div class="error" data-ng-show="$ctrl.isShowFieldInvalidState($ctrl.editItemForm, 'itemClass')">
+                    Please select a class
+                </div>
             </div>
             <div class="igz-col-65"></div>
         </div>
