--- a/src/nuclio/common/components/monaco/monaco.tpl.html
+++ b/src/nuclio/common/components/monaco/monaco.tpl.html
@@ -1,5 +1,6 @@
 <div class="ncl-monaco">
     <div igz-monaco-editor
          data-code-file="selectedCodeFile"
-         data-editor-theme="$ctrl.selectedTheme"></div>
+         data-editor-theme="$ctrl.selectedTheme"
+         data-mini-monaco="$ctrl.miniMonaco"></div>
 </div>
