--- a/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.less
+++ b/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.less
@@ -33,6 +33,10 @@
                 .field-content {
                     width: 100%;
 
+                    .ncl-monaco {
+                        height: 200px;
+                    }
+
                     .event-body {
                         font-size: 13px;
                         outline: none;
