--- a/src/nuclio/projects/project/functions/version/version.less
+++ b/src/nuclio/projects/project/functions/version/version.less
@@ -194,6 +194,7 @@
                 margin: 5px 0 0 4px;
                 min-height: 280px;
                 max-height: 280px;
+                height: 280px;
                 white-space: pre-wrap;
 
                 .log-entry {
