Impl [nuclio] Bundle of tasks (see description) (#46)
- Allow drag'n'drop of text files into monaco editor (P4)
- Blue border of input fields should be on focus, not on hover
- If "Content type" field is set to "JSON" then have a small monaco
  editor instance to format as JSON
- Need to add scrollbars, otherwise when deploy/response panel is open –
  the user can't reach the bottom of the tab
- IG-1765 [Nuclio] Versions Configurations - Data Bindings. Should not
  add new binding without selected class
- IG-1761 [Nuclio] Version navigation between tabs with opened Test
  section issue Visual/animation issue when expanding "Deploy" block

--- a/src/nuclio/common/less/general-rules.less
+++ b/src/nuclio/common/less/general-rules.less
@@ -3,5 +3,13 @@ body {
         width: 100%;
         height: 100%;
     }
+
+    .nuclio-validating-input {
+        .validating-input-field .input-field, .validating-input-field .textarea-field {
+            &:not([disabled]):not([readonly]):not(:focus):hover {
+                border: solid 1px @ncl-pale-grey;
+            }
+        }
+    }
 }
 
