--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -1,32 +1,67 @@
-.tab-content-wrapper {
-    min-width: 946px;
-    padding: 24px 41px;
+.ncl-edit-version-code {
     height: 100%;
-    margin-bottom: 24px;
+    display: flex;
+    flex-flow: column;
+    padding-bottom: 24px !important;
+
+    .igz-scrollable-container {
+        height: 100%;
+
+        .ncl-monaco {
+            height: 100%;
+        }
+    }
+
+    .ncl-edit-version-code-wrapper {
+        height: 100%;
+        padding: 24px 41px;
+    }
 
     .section-wrapper {
         padding: 18px 39px 0 23px;
     }
 
-    .ncl-edit-version-code {
-        height: 100%;
-        display: flex;
-        flex-flow: column;
+    .code-entry-section {
+        flex: 0 1 auto;
+    }
 
-        .code-entry-section {
-            flex: 0 1 auto;
+    .code-edit-section {
+        position: relative;
+        flex: 1 1 auto;
+        display: flex;
+        height: 400px;
+
+        .code-editor-drop-zone {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgb(200, 200, 200);
+            outline: 3px dashed black;
+            outline-offset: -10px;
+            display: none;
+
+            &.dragover {
+                display: block;
+
+                &:before {
+                    content: 'Drop files here';
+                    display: inline-block;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    font-size: xx-large;
+                }
+            }
         }
 
-        .code-edit-section {
-            flex: 1 1 auto;
-            display: flex;
+        .monaco-code-editor {
+            width: 100%;
 
-            ncl-monaco {
-                width: 100%;
-
-                .ncl-monaco {
-                    height: 100%;
-                }
+            .ncl-monaco {
+                height: 100%;
             }
         }
     }
@@ -95,13 +130,28 @@
             }
         }
     }
+}
 
-    .code-edit-section {
-        min-height: 400px;
-
-        .code-editor {
+@media screen and (min-height: 850px) {
+    .ncl-edit-version-code {
+        .code-edit-section {
             height: 500px;
-            width: 100%;
+        }
+    }
+}
+
+@media screen and (min-height: 900px) {
+    .ncl-edit-version-code {
+        .code-edit-section {
+            height: 600px;
+        }
+    }
+}
+
+@media screen and (min-height: 1300px) {
+    .ncl-edit-version-code {
+        .code-edit-section {
+            height: 900px;
         }
     }
 }
