implement ingresses in http trigger

--- a/src/nuclio/common/components/edit-item/edit-item.less
+++ b/src/nuclio/common/components/edit-item/edit-item.less
@@ -33,7 +33,7 @@
     }
 
     .attribute-field {
-        margin-right: 14px;
+        margin-right: 1%;
         padding: 8px 0 6px;
 
         .field-label {
