--- a/src/nuclio/projects/project/functions/version/version-trigger/version-trigger.less
+++ b/src/nuclio/projects/project/functions/version/version-trigger/version-trigger.less
@@ -1,6 +1,10 @@
 .ncl-version-trigger {
     padding: 11px 24px;
 
+    .igz-scrollable-container {
+        max-height: 500px;
+    }
+
     .common-table-header {
         border: none;
         padding-left: 24px;
