--- a/src/igz_controls/components/number-input/number-input.less
+++ b/src/igz_controls/components/number-input/number-input.less
@@ -28,7 +28,7 @@
             border: solid 1px @dark-sky-blue;
         }
 
-        &.invalid:not(.pristine) {
+        &.invalid:not(.pristine), &.invalid.submitted {
             background-color: #fbe5e8;
             border: solid 1px @darkish-pink;
             box-shadow: none;
