function creating general fixes

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.less
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.less
@@ -20,6 +20,14 @@
 
                 min-width: 0;
             }
+
+            .scrollable-content {
+                display: flex;
+                min-height: 55px;
+                padding-right: 10px;
+                overflow: hidden;
+                align-items: center;
+            }
         }
 
         .function-row-collapse {
