--- a/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
@@ -11,7 +11,7 @@
                 {{$ctrl.item.name}}
             </div>
             <div class="item-class">
-                {{$ctrl.item.kind}}
+                {{$ctrl.item.ui.className}}
             </div>
             <div class="igz-col-70 item-info">
                 <div data-ng-hide="$ctrl.item.ui.editModeActive" class="collapsed-item-info-block">
